# tree-sitter-query

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  index.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-query.wasm  tree-sitter.json
.github/workflows/: ci.yaml  publish.yaml
bindings/c/: tree-sitter-query.pc.in
bindings/c/tree_sitter/: tree-sitter-query.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_query/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterQuery/: query.h
bindings/swift/TreeSitterQueryTests/: TreeSitterQueryTests.swift
corpus/: modelines.txt  statements.txt
queries/query/: folds.scm  highlights.scm
scripts/: download-examples.sh
src/: binding.cc  grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: statements.txt
test/highlight/: statements.scm
