[package]
name = "tree-sitter-query"
description = "query grammar for the tree-sitter parsing library"
version = "0.2.0"
keywords = ["incremental", "parsing", "query"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-query"
homepage = "https://github.com/tree-sitter-grammars/tree-sitter-query"
edition = "2021"
readme = "README.md"
authors = ["Steven Sojka", "Stephan Seitz"]
license = "Apache-2.0"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "^1.0"
